# satif

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  markdown-page.html  pydoc-markdown.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: publish_satif_ai.yml  publish_satif_core.yml  publish_satif_sdk.yml  publish_sdif_db.yml  publish_sdif_mcp.yml  publish_xlsx_to_sdif.yml
assets/css/: styles.40373ca7.css  styles.f96d7236.css
assets/js/: 0084c19f.c8986de1.js  013b6b81.1edfa9f0.js  0340ba91.1b59c788.js  05d575fb.689eb1a8.js  061b651e.878124f9.js  084ce0ca.8d83240f.js  09a58556.df57c51c.js  0ad736ac.30d920df.js  0d19590c.c98fcfb7.js  0db5d8ff.7ed2241f.js  0dd0ee05.a5f131fe.js  0dffb83e.d0e9a1ba.js  0e163c54.f447e345.js  0fcefb58.a4885acc.js  14eb3368.91863e11.js  16fe840b.2fa4bd4f.js  17896441.a713d0bd.js  1d061b58.ed431e10.js  1db64337.166a4a13.js  1df93b7f.c74db717.js  2b350352.c60f4bb3.js  2ce4d6d7.2e39946d.js  2d481beb.62732059.js  3624.60203b3d.js  381cd42b.8ba5b093.js  393be207.771a7e3e.js  3af61872.c1f371a6.js  3c61fbfb.55a62357.js  4028e479.9f862827.js  416e0fb4.c0e663ae.js  466bd146.fa5a039f.js  4dbed157.44b9cb3e.js  4e0cff5a.eb2c0272.js  4edc2a5b.e19506b4.js  4f162277.a2ff14f9.js  5776855d.048aa379.js  5beb6b22.6318df74.js  604ff1c5.fca1e112.js  605d08d1.8ac60bbf.js  60718f4e.397ac0c3.js  (+85 more)
docs/: adapters.html  api-reference.html  api_reference.html  code-executors.html  comparators.html  core-concepts.html  docusaurus.config.ts  libs.html  merge_sdif().html  overview.html  quickstart.html  representers.html  rfc.html  roadmap.html  sdif_database.html  sidebars.ts  standardizers.html  terminology.html  transformation-builders.html  transformers.html  use-cases.html
docs/adapters/: code_adapter.html  schema_adapter.html  tidy_adapter.html
docs/api_reference/satif_ai/: standardize.html  transform.html
docs/api_reference/satif_core/: exceptions.html  sdif_db.html  types.html
docs/api_reference/satif_sdk/: utils.html
docs/api_reference/sdif_db/: database.html  schema.html  utils.html
docs/code_executors/: local_code_executor.html
docs/comparators/: csv_comparator.html  sdif_schema_comparator.html
docs/concepts/: sdif.html  standardization.html  transformation.html
docs/docs/: libs.md  merge_sdif().md  overview.md  quickstart.md  roadmap.md  sdif_database.md  terminology.md
docs/docs/adapters/: code_adapter.md  schema_adapter.md  tidy_adapter.md
docs/docs/code_executors/: local_code_executor.md
docs/docs/comparators/: csv_comparator.md  sdif_schema_comparator.md
docs/docs/concepts/: sdif.md  (+2 more)
docs/representers/: csv_representer.html  xlsx_representer.html
docs/rfc/: sp-rfc-002.html
docs/standardizers/: ai_csv_standardizer.html  ai_standardizer.html  ai_xslx_standardizer.html  csv_standardizer.html  remote_standardizer.html
docs/transformation_builders/: syncpulse_transformation_builder.html
docs/transformers/: code_transformer.html
docs/use_cases/: build_a_transformation_pipeline.html  chatting_with_your_files.html
libs/ai/: Makefile  README.md  pyproject.toml
libs/ai/satif_ai/: __init__.py  standardize.py  transform.py
libs/ai/satif_ai/adapters/: tidy.py
libs/ai/satif_ai/standardizers/: ai.py  ai_csv.py  ai_xlsx.py
libs/ai/satif_ai/transformation_builders/: syncpulse.py
libs/ai/satif_ai/utils/: __init__.py  merge_sdif.py  openai_mcp.py  zip.py
libs/ai/tests/: test_ai_standardizer.py  test_merge_sdif.py
libs/core/: Makefile  README.md  pyproject.toml
libs/core/satif_core/: __init__.py  exceptions.py  sdif_db.py  types.py
libs/core/satif_core/adapters/: base.py
libs/core/satif_core/code_executors/: __init__.py  _exceptions.py  base.py
libs/core/satif_core/comparators/: base.py
libs/core/satif_core/representers/: base.py
libs/core/satif_core/standardizers/: __init__.py  base.py
libs/core/satif_core/transformation_builders/: base.py
libs/core/satif_core/transformers/: base.py
libs/core/tests/: test_base_adapter.py  test_base_comparator.py  test_base_representer.py  test_base_standardizer.py  test_base_transformation_builder.py  test_base_transformer.py  test_code_executor.py
libs/mcp/: LICENSE  Makefile  README.md  TODO.md  pyproject.toml
libs/mcp/sdif_mcp/: prompt.py  server.py
libs/sdif/: Makefile  README.md  pyproject.toml
libs/sdif/sdif_db/: __init__.py  database.py  schema.py  utils.py
libs/sdif/tests/: conftest.py  test_database.py  test_schema.py  test_utils.py
libs/sdk/: :memory:  Makefile  README.md  pyproject.toml
libs/sdk/satif_sdk/: __init__.py  utils.py
libs/sdk/satif_sdk/adapters/: __init__.py  code.py
libs/sdk/satif_sdk/code_executors/: __init__.py  local_executor.py
libs/sdk/satif_sdk/comparators/: __init__.py  csv.py  sdif.py  sdif_schema.py
libs/sdk/satif_sdk/representers/: __init__.py  csv.py  xlsx.py
libs/sdk/satif_sdk/standardizers/: __init__.py  csv.py  remote.py  xlsx.py
libs/sdk/satif_sdk/transformers/: __init__.py  code.py
libs/sdk/scripts/: copy_docs_to_docusaurus.py
libs/sdk/tests/adapters/: test_code_adapter.py
libs/sdk/tests/code_executors/: test_local_code_executor.py
libs/sdk/tests/comparators/: test_csv_comparator.py  test_sdif_schema_comparator.py
libs/sdk/tests/standardizers/: conftest.py  test_csv_standardizer.py  test_xlsx_standardizer.py
libs/sdk/tests/transformers/: test_code_transformer.py
libs/xlsx-to-sdif/: .gitignore  Makefile  README.md  pyproject.toml
libs/xlsx-to-sdif/xlsx_to_sdif/: __init__.py  configuration.py  graph.py  prompt.py  state.py  tools.py  utils.py
libs/xlsx-to-sdif/xlsx_to_sdif/nodes/: build_spreadsheet_state.py  cleanup_workbook.py  ensure_active_sheet_displayed_range.py  export_active_sheet_image.py  llm_call.py  tools_execution.py  transform_to_sdif.py
libs/xlsx-to-sdif/xlsx_to_sdif/services/: aspose_cells2png.py  google_sheets.py  html2png.py
libs/xlsx-to-sdif/xlsx_to_sdif/spreadsheet/: aspose_cells.py  base.py  google_sheets.py
scripts/: generate_png_diagrams.py  release.sh
(+144 files in other folders)
